style: fix users buttons alignments

--- a/public/css/privateAccess/session.css
+++ b/public/css/privateAccess/session.css
@@ -98,6 +98,7 @@ div.user-content p {
 
 div.user-content div.button-container {
   display: flex;
+  align-items: center;
   gap: 8px;
   margin-top: 8px;
 }
